examples/error/main.go
package main

func main() {
	error_def()
	// custom_error_def()
}
